Routine code cleaning and minor fixes

--- a/main.ipynb
+++ b/main.ipynb
@@ -43,15 +43,12 @@
     "## import libraries\n",
     "\n",
     "import os\n",
-    "import sys\n",
     "import argparse\n",
     "import datetime\n",
     "import time\n",
-    "import csv\n",
     "import os.path as osp\n",
     "import numpy as np\n",
     "import warnings\n",
-    "import importlib\n",
     "import pandas as pd\n",
     "warnings.filterwarnings('ignore')\n",
     "\n",
@@ -76,9 +73,11 @@
     "\n",
     "Augmentations Notes:\n",
     "- none: no augmentations\n",
-    "- normal: normal augmentations (geo, geo-photo, photo)\n",
+    "- normal: normal augmentations (geometric, photometric, geo-photo)\n",
     "- com-cor: common corruptions\n",
-    "- downsmp: downsampling"
+    "- downsmp: downsampling\n",
+    "- faa: faster autoaugment (requires policy weights inside the faster_autoaugment/policy_weights)\n",
+    "\n"
    ]
   },
   {
@@ -95,21 +94,33 @@
     "options['outf'] = './results'\n",
     "options['dataset'] = 'mosquito'  ## USUALLY MODIFIED: 'cifar10' or 'mosquito'\n",
     "options['dataset_mosq'] = 'HQ100' ## when mosquito dataset is selected, choose dataset ratio ('HQ100': High Quality 100%, 'HQ100LQ20': HQ 100% and LQ 20%)\n",
-    "options['workers'] = 8 ## number of data loading workers (default: 2)\n",
+    "options['workers'] = 2 ## number of data loading workers (default: 2)\n",
     "options['input_size'] = 224 ## USUALLY MODIFIED\n",
+    "options['dataset_addr_HQ100'] = {\n",
+    "            'train':'R:/Datasets/mosquito/sets/raw-high/train/',   ## using train folder\n",
+    "            'test':'R:/Datasets/mosquito/sets/raw-high/test/',     ## using test folder\n",
+    "            'eval':'R:/Datasets/mosquito/raw-hl/low/',\n",
+    "        }\n",
+    "options['dataset_addr_HQ100LQ20'] = {\n",
+    "            'train':'R:/Datasets/mosquito/sets/raw-comb/100-20/train/',   ## using combined train folder (HQ100% - LQ20%)\n",
+    "            'test':'R:/Datasets/mosquito/sets/raw-high/test/',     ## using test folder\n",
+    "            'eval':'R:/Datasets/mosquito/sets/raw-low/test/',\n",
+    "        }\n",
+    "\n",
     "\n",
     "## AUGMENTATIONS \n",
-    "## USUALLY MODIFIED: main augmentation ['aprs', 'normal', 'com-cor', 'amp-adj', 'dsamp'] DEFAULT: []\n",
+    "## USUALLY MODIFIED: main augmentation ['aprs', 'normal', 'com-cor', 'amp-adj', 'dsamp', 'faa'] DEFAULT: []\n",
     "## it has tuples to take in the probability of the augmentation\n",
-    "options['main_aug'] = [('aprs', .5), ('amp-adj', .2), ('com-cor', .5)]                        \n",
+    "options['main_aug'] = [('normal', .5)]# [('aprs', .5), ('amp-adj', .2), ('com-cor', .5)]                        \n",
     "options['aprp'] = False ## APR-Pair is activated in the training, turn on/off here\n",
+    "## when the normal augmentations is activated in main_aug, it will use aug_set for the kind of augmentations to use\n",
     "options['aug_set'] = 'geo-photo' ## ['geo', 'photo', 'geo-photo', 'geo-k', 'photo-k', 'geo-photo-k'] '-k' means kornia version or the default PIL ver\n",
     "\n",
     "\n",
     "# optimization\n",
     "options['batch_size'] = 32 ## USUALLY MODIFIED\n",
     "options['lr'] = 0.1 ## model learning rate\n",
-    "options['max_epoch'] = 2#00\n",
+    "options['max_epoch'] = 200\n",
     "options['stepsize'] = 30\n",
     "\n",
     "# model\n",
@@ -120,19 +131,11 @@
     "load_criterion_adr = \"results/checkpoints/3_27_exp13/wider_resnet_28_10_mosquito_amp-adj__criterion.pth\"\n",
     "\n",
     "# misc\n",
-    "options['eval_freq'] = 1#0\n",
-    "options['print_freq'] = 100\n",
+    "options['eval_freq'] = 10  ## it will print results every eval_freq epochs\n",
     "options['gpu'] = '0'\n",
     "options['seed'] = 0\n",
     "options['use_cpu'] = False\n",
     "options['eval'] = False ## train or evaluate\n",
-    "\n",
-    "# parameters for generating adversarial examples\n",
-    "options['epsilon'] = 0.0157 ## maximum perturbation of adversaries (4/255=0.0157)\n",
-    "options['alpha'] = 0.00784 ## movement multiplier per iteration when generating adversarial examples (2/255=0.00784)\n",
-    "options['k'] = 10 ## maximum iteration when generating adversarial examples\n",
-    "options['perturbation_type'] = 'linf' ## the type of the perturbation ('linf' or 'l2')\n",
-    "\n",
     "\n",
     "if not os.path.exists(options['outf']):\n",
     "    os.makedirs(options['outf'])\n",
@@ -146,7 +149,7 @@
     "\n",
     "\n",
     "if options['outf'] == \"None\":\n",
-    "    options['outf'] = \"./results/checkpoints/DefaultBin/\"\n"
+    "    options['outf'] = \"./results/DefaultBin/\"\n"
    ]
   },
   {
@@ -207,13 +210,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "APRecombination ('aprs', 0.5)\n",
-      "AMPAdjust ('amp-adj', 0.2)\n",
-      "ComCorAugmentations ('com-cor', 0.5)\n",
+      "NormalAugmentations ('normal', 0.5)\n",
       "Creating model: resnet18\n",
       "resnet18\n",
-      "==> Epoch 1/2\n",
-      "Batch 28/115\t Loss 2.522288 (2.990780)\n"
+      "==> Epoch 1/200\n",
+      "Batch 28/115\t Loss 1.904637 (4.331332)\n"
      ]
     },
     {
@@ -224,13 +225,7 @@
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
       "Cell \u001b[1;32mIn[4], line 87\u001b[0m\n\u001b[0;32m     84\u001b[0m \u001b[39mfor\u001b[39;00m epoch \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(options[\u001b[39m'\u001b[39m\u001b[39mmax_epoch\u001b[39m\u001b[39m'\u001b[39m]):\n\u001b[0;32m     85\u001b[0m     \u001b[39mprint\u001b[39m(\u001b[39m\"\u001b[39m\u001b[39m==> Epoch \u001b[39m\u001b[39m{}\u001b[39;00m\u001b[39m/\u001b[39m\u001b[39m{}\u001b[39;00m\u001b[39m\"\u001b[39m\u001b[39m.\u001b[39mformat(epoch\u001b[39m+\u001b[39m\u001b[39m1\u001b[39m, options[\u001b[39m'\u001b[39m\u001b[39mmax_epoch\u001b[39m\u001b[39m'\u001b[39m]))\n\u001b[1;32m---> 87\u001b[0m     train(net, criterion, optimizer, trainloader, epoch\u001b[39m=\u001b[39;49mepoch, \u001b[39m*\u001b[39;49m\u001b[39m*\u001b[39;49moptions)\n\u001b[0;32m     89\u001b[0m     \u001b[39mif\u001b[39;00m options[\u001b[39m'\u001b[39m\u001b[39meval_freq\u001b[39m\u001b[39m'\u001b[39m] \u001b[39m>\u001b[39m \u001b[39m0\u001b[39m \u001b[39mand\u001b[39;00m (epoch\u001b[39m+\u001b[39m\u001b[39m1\u001b[39m) \u001b[39m%\u001b[39m options[\u001b[39m'\u001b[39m\u001b[39meval_freq\u001b[39m\u001b[39m'\u001b[39m] \u001b[39m==\u001b[39m \u001b[39m0\u001b[39m \u001b[39mor\u001b[39;00m (epoch\u001b[39m+\u001b[39m\u001b[39m1\u001b[39m) \u001b[39m==\u001b[39m options[\u001b[39m'\u001b[39m\u001b[39mmax_epoch\u001b[39m\u001b[39m'\u001b[39m]:\n\u001b[0;32m     90\u001b[0m         \u001b[39mprint\u001b[39m(\u001b[39m\"\u001b[39m\u001b[39m==> Test\u001b[39m\u001b[39m\"\u001b[39m)\n",
-      "File \u001b[1;32me:\\PostDoc\\Coding\\Z-Turnover\\NormalAugmentations_Plus\\core\\train.py:75\u001b[0m, in \u001b[0;36mtrain\u001b[1;34m(net, criterion, optimizer, trainloader, epoch, **options)\u001b[0m\n\u001b[0;32m     72\u001b[0m torch\u001b[39m.\u001b[39mcuda\u001b[39m.\u001b[39mempty_cache()\n\u001b[0;32m     74\u001b[0m loss_all \u001b[39m=\u001b[39m \u001b[39m0\u001b[39m\n\u001b[1;32m---> 75\u001b[0m \u001b[39mfor\u001b[39;00m batch_idx, (data, labels) \u001b[39min\u001b[39;00m \u001b[39menumerate\u001b[39m(trainloader):\n\u001b[0;32m     76\u001b[0m     \u001b[39mif\u001b[39;00m options[\u001b[39m'\u001b[39m\u001b[39muse_gpu\u001b[39m\u001b[39m'\u001b[39m]:\n\u001b[0;32m     77\u001b[0m         inputs, targets \u001b[39m=\u001b[39m data\u001b[39m.\u001b[39mcuda(), labels\u001b[39m.\u001b[39mcuda()\n",
-      "File \u001b[1;32md:\\anaconda3\\envs\\apr-kornia\\lib\\site-packages\\torch\\utils\\data\\dataloader.py:634\u001b[0m, in \u001b[0;36m_BaseDataLoaderIter.__next__\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m    631\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_sampler_iter \u001b[39mis\u001b[39;00m \u001b[39mNone\u001b[39;00m:\n\u001b[0;32m    632\u001b[0m     \u001b[39m# TODO(https://github.com/pytorch/pytorch/issues/76750)\u001b[39;00m\n\u001b[0;32m    633\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_reset()  \u001b[39m# type: ignore[call-arg]\u001b[39;00m\n\u001b[1;32m--> 634\u001b[0m data \u001b[39m=\u001b[39m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_next_data()\n\u001b[0;32m    635\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_num_yielded \u001b[39m+\u001b[39m\u001b[39m=\u001b[39m \u001b[39m1\u001b[39m\n\u001b[0;32m    636\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_dataset_kind \u001b[39m==\u001b[39m _DatasetKind\u001b[39m.\u001b[39mIterable \u001b[39mand\u001b[39;00m \\\n\u001b[0;32m    637\u001b[0m         \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_IterableDataset_len_called \u001b[39mis\u001b[39;00m \u001b[39mnot\u001b[39;00m \u001b[39mNone\u001b[39;00m \u001b[39mand\u001b[39;00m \\\n\u001b[0;32m    638\u001b[0m         \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_num_yielded \u001b[39m>\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_IterableDataset_len_called:\n",
-      "File \u001b[1;32md:\\anaconda3\\envs\\apr-kornia\\lib\\site-packages\\torch\\utils\\data\\dataloader.py:1329\u001b[0m, in \u001b[0;36m_MultiProcessingDataLoaderIter._next_data\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m   1326\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_process_data(data)\n\u001b[0;32m   1328\u001b[0m \u001b[39massert\u001b[39;00m \u001b[39mnot\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_shutdown \u001b[39mand\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_tasks_outstanding \u001b[39m>\u001b[39m \u001b[39m0\u001b[39m\n\u001b[1;32m-> 1329\u001b[0m idx, data \u001b[39m=\u001b[39m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_get_data()\n\u001b[0;32m   1330\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_tasks_outstanding \u001b[39m-\u001b[39m\u001b[39m=\u001b[39m \u001b[39m1\u001b[39m\n\u001b[0;32m   1331\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_dataset_kind \u001b[39m==\u001b[39m _DatasetKind\u001b[39m.\u001b[39mIterable:\n\u001b[0;32m   1332\u001b[0m     \u001b[39m# Check for _IterableDatasetStopIteration\u001b[39;00m\n",
-      "File \u001b[1;32md:\\anaconda3\\envs\\apr-kornia\\lib\\site-packages\\torch\\utils\\data\\dataloader.py:1285\u001b[0m, in \u001b[0;36m_MultiProcessingDataLoaderIter._get_data\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m   1283\u001b[0m \u001b[39melif\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_pin_memory:\n\u001b[0;32m   1284\u001b[0m     \u001b[39mwhile\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_pin_memory_thread\u001b[39m.\u001b[39mis_alive():\n\u001b[1;32m-> 1285\u001b[0m         success, data \u001b[39m=\u001b[39m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_try_get_data()\n\u001b[0;32m   1286\u001b[0m         \u001b[39mif\u001b[39;00m success:\n\u001b[0;32m   1287\u001b[0m             \u001b[39mreturn\u001b[39;00m data\n",
-      "File \u001b[1;32md:\\anaconda3\\envs\\apr-kornia\\lib\\site-packages\\torch\\utils\\data\\dataloader.py:1133\u001b[0m, in \u001b[0;36m_MultiProcessingDataLoaderIter._try_get_data\u001b[1;34m(self, timeout)\u001b[0m\n\u001b[0;32m   1120\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39m_try_get_data\u001b[39m(\u001b[39mself\u001b[39m, timeout\u001b[39m=\u001b[39m_utils\u001b[39m.\u001b[39mMP_STATUS_CHECK_INTERVAL):\n\u001b[0;32m   1121\u001b[0m     \u001b[39m# Tries to fetch data from `self._data_queue` once for a given timeout.\u001b[39;00m\n\u001b[0;32m   1122\u001b[0m     \u001b[39m# This can also be used as inner loop of fetching without timeout, with\u001b[39;00m\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m   1130\u001b[0m     \u001b[39m# Returns a 2-tuple:\u001b[39;00m\n\u001b[0;32m   1131\u001b[0m     \u001b[39m#   (bool: whether successfully get data, any: data if successful else None)\u001b[39;00m\n\u001b[0;32m   1132\u001b[0m     \u001b[39mtry\u001b[39;00m:\n\u001b[1;32m-> 1133\u001b[0m         data \u001b[39m=\u001b[39m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_data_queue\u001b[39m.\u001b[39;49mget(timeout\u001b[39m=\u001b[39;49mtimeout)\n\u001b[0;32m   1134\u001b[0m         \u001b[39mreturn\u001b[39;00m (\u001b[39mTrue\u001b[39;00m, data)\n\u001b[0;32m   1135\u001b[0m     \u001b[39mexcept\u001b[39;00m \u001b[39mException\u001b[39;00m \u001b[39mas\u001b[39;00m e:\n\u001b[0;32m   1136\u001b[0m         \u001b[39m# At timeout and error, we manually check whether any worker has\u001b[39;00m\n\u001b[0;32m   1137\u001b[0m         \u001b[39m# failed. Note that this is the only mechanism for Windows to detect\u001b[39;00m\n\u001b[0;32m   1138\u001b[0m         \u001b[39m# worker failures.\u001b[39;00m\n",
-      "File \u001b[1;32md:\\anaconda3\\envs\\apr-kornia\\lib\\queue.py:179\u001b[0m, in \u001b[0;36mQueue.get\u001b[1;34m(self, block, timeout)\u001b[0m\n\u001b[0;32m    177\u001b[0m         \u001b[39mif\u001b[39;00m remaining \u001b[39m<\u001b[39m\u001b[39m=\u001b[39m \u001b[39m0.0\u001b[39m:\n\u001b[0;32m    178\u001b[0m             \u001b[39mraise\u001b[39;00m Empty\n\u001b[1;32m--> 179\u001b[0m         \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mnot_empty\u001b[39m.\u001b[39;49mwait(remaining)\n\u001b[0;32m    180\u001b[0m item \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_get()\n\u001b[0;32m    181\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mnot_full\u001b[39m.\u001b[39mnotify()\n",
-      "File \u001b[1;32md:\\anaconda3\\envs\\apr-kornia\\lib\\threading.py:306\u001b[0m, in \u001b[0;36mCondition.wait\u001b[1;34m(self, timeout)\u001b[0m\n\u001b[0;32m    304\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[0;32m    305\u001b[0m     \u001b[39mif\u001b[39;00m timeout \u001b[39m>\u001b[39m \u001b[39m0\u001b[39m:\n\u001b[1;32m--> 306\u001b[0m         gotit \u001b[39m=\u001b[39m waiter\u001b[39m.\u001b[39;49macquire(\u001b[39mTrue\u001b[39;49;00m, timeout)\n\u001b[0;32m    307\u001b[0m     \u001b[39melse\u001b[39;00m:\n\u001b[0;32m    308\u001b[0m         gotit \u001b[39m=\u001b[39m waiter\u001b[39m.\u001b[39macquire(\u001b[39mFalse\u001b[39;00m)\n",
+      "File \u001b[1;32me:\\PostDoc\\Coding\\Z-Turnover\\NormalAugmentations_Plus\\core\\train.py:102\u001b[0m, in \u001b[0;36mtrain\u001b[1;34m(net, criterion, optimizer, trainloader, epoch, **options)\u001b[0m\n\u001b[0;32m     99\u001b[0m     loss\u001b[39m.\u001b[39mbackward()\n\u001b[0;32m    100\u001b[0m     optimizer\u001b[39m.\u001b[39mstep()\n\u001b[1;32m--> 102\u001b[0m losses\u001b[39m.\u001b[39mupdate(loss\u001b[39m.\u001b[39mitem(), targets\u001b[39m.\u001b[39;49msize(\u001b[39m0\u001b[39m))\n\u001b[0;32m    104\u001b[0m \u001b[39mif\u001b[39;00m (batch_idx\u001b[39m+\u001b[39m\u001b[39m1\u001b[39m) \u001b[39m%\u001b[39m options[\u001b[39m'\u001b[39m\u001b[39mprint_freq\u001b[39m\u001b[39m'\u001b[39m] \u001b[39m==\u001b[39m \u001b[39m0\u001b[39m:\n\u001b[0;32m    105\u001b[0m     \u001b[39mprint\u001b[39m(\u001b[39m\"\u001b[39m\u001b[39mBatch \u001b[39m\u001b[39m{}\u001b[39;00m\u001b[39m/\u001b[39m\u001b[39m{}\u001b[39;00m\u001b[39m\\t\u001b[39;00m\u001b[39m Loss \u001b[39m\u001b[39m{:.6f}\u001b[39;00m\u001b[39m (\u001b[39m\u001b[39m{:.6f}\u001b[39;00m\u001b[39m)\u001b[39m\u001b[39m\"\u001b[39m \\\n\u001b[0;32m    106\u001b[0m           \u001b[39m.\u001b[39mformat(batch_idx\u001b[39m+\u001b[39m\u001b[39m1\u001b[39m, \u001b[39mlen\u001b[39m(trainloader), losses\u001b[39m.\u001b[39mval, losses\u001b[39m.\u001b[39mavg))\n",
       "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
      ]
     }
@@ -243,19 +238,11 @@
     "\n",
     "elif options['dataset'] == 'mosquito': ## for mosquito dataset\n",
     "    if options['dataset_mosq'] == 'HQ100':\n",
-    "        data_dir = {\n",
-    "            'train':'R:/Datasets/mosquito/sets/raw-high/train/',   ## using train folder\n",
-    "            'test':'R:/Datasets/mosquito/sets/raw-high/test/',     ## using test folder\n",
-    "            'eval':'R:/Datasets/mosquito/raw-hl/low/',\n",
-    "        }\n",
+    "        data_dir = options['dataset_addr_HQ100']\n",
     "\n",
     "    elif options['dataset_mosq'] == 'HQ100LQ20':\n",
-    "        data_dir = {\n",
-    "            'train':'R:/Datasets/mosquito/sets/raw-comb/100-20/train/',   ## using combined train folder (HQ100% - LQ20%)\n",
-    "            'test':'R:/Datasets/mosquito/sets/raw-high/test/',     ## using test folder\n",
-    "            'eval':'R:/Datasets/mosquito/sets/raw-low/test/',\n",
-    "\n",
-    "        }\n",
+    "        data_dir = options['dataset_addr_HQ100LQ20']\n",
+    "        \n",
     "    Data = CustomDataset(dataroot=data_dir, batch_size=options['batch_size'], _transforms=options['main_aug'], _eval=True, input_size=options['input_size'])\n",
     "\n",
     "    ## Initialize the dataloader\n",
@@ -336,7 +323,7 @@
     "\n",
     "        if best_acc_out < results['ACC_OUT']:\n",
     "            best_acc_out = results['ACC_OUT']\n",
-    "            print(\"Best Out Set Acc (%): {:.3f}\\t\".format(best_acc))\n",
+    "            print(\"Best Out Set Acc (%): {:.3f}\\t\".format(best_acc_out))\n",
     "            ## save the parameters for the best acc out\n",
     "            save_networks(net, options['outf'], file_name, loss='BestAccOut', criterion=criterion)\n",
     "        \n",
