--- a/main.ipynb
+++ b/main.ipynb
@@ -8,12 +8,19 @@
     "## Normal Augmentations+\n",
     "\n",
     "This notebook provides the code for training a network with the following augmentation settings: <br>\n",
-    "* Geometric Augmentations (e.g., Horizontal Flip, Rotation, etc.)\n",
-    "* Photometric Augmentations (e.g., Autocontrast, Equalization)\n",
-    "* Downsampling\n",
-    "* Common Corruptions\n",
-    "* Amplitude-Phase Recombination\n",
-    "* Amplitude-Adjust (changes the intensity of the amplitude info in the freq. domain)\n",
+    "* <b>Geometric Augmentations</b> \n",
+    "    - e.g., Horizontal Flip, Rotation, etc.\n",
+    "* <b>Photometric Augmentations</b> \n",
+    "    - e.g., Autocontrast, Equalization\n",
+    "* <b>Downsampling</b> \n",
+    "    - i.e., downsamples an image and then resizes it to its original size\n",
+    "* <b>Common Corruptions</b> \n",
+    "    - e.g., motion blur, frost, etc.\n",
+    "* <b>Amplitude-Phase Recombination</b>\n",
+    "    * APR-Single: Swaps the amplitude and phase info of an image and its augmented version in the freq. domain\n",
+    "    * APR-Pair: Swaps the amplitude and phase info of two images in the freq. domain \n",
+    "* <b>Amplitude-Adjust</b> \n",
+    "    - i.e., changes the intensity of the amplitude info in the freq. domain\n",
     "<br><br>\n",
     "\n",
     "Note: \n",
@@ -36,32 +43,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "## import libraries\n",
     "\n",
     "import os\n",
-    "import argparse\n",
     "import datetime\n",
     "import time\n",
-    "import os.path as osp\n",
-    "import numpy as np\n",
     "import warnings\n",
-    "import pandas as pd\n",
     "warnings.filterwarnings('ignore')\n",
     "\n",
     "import torch\n",
     "import torch.nn as nn\n",
     "from torch.optim import lr_scheduler\n",
     "import torch.backends.cudnn as cudnn\n",
-    "import torchvision\n",
     "from datasets import CIFAR10D, CIFAR100D, CustomDataset\n",
     "from utils.utils import AverageMeter, Logger, save_networks, load_networks\n",
-    "from core import train, test, test_robustness, test_two_datasets\n",
-    "\n",
-    "parser = argparse.ArgumentParser(\"Training\")\n"
+    "from core import train, test_two_datasets"
    ]
   },
   {
@@ -74,19 +74,25 @@
     "Augmentations Notes:\n",
     "- none: no augmentations\n",
     "- normal: normal augmentations (geometric, photometric, geo-photo)\n",
+    "- aprs: apr-single\n",
+    "- aprp: apr-pair\n",
+    "- amp-adj: amplitude adjust\n",
     "- com-cor: common corruptions\n",
-    "- downsmp: downsampling\n",
+    "- dsamp: downsampling\n",
     "- faa: faster autoaugment (requires policy weights inside the faster_autoaugment/policy_weights)\n",
-    "\n"
+    "\n",
+    "The augmentation be selected using a list in the main_aug. > <b>[(*AUG1, *PROB), (*AUG2, *PROB)]</b> <br>\n",
+    "The augmentations are implemented one by one according to their arrangement.\n",
+    "\n",
+    "The parameters usually modified from experiment to experiment has <u><b>## USUALLY MODIFIED:</b></u> comment.\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "parser = argparse.ArgumentParser(\"Training\")\n",
     "options = {}\n",
     "\n",
     "# dataset\n",
@@ -110,7 +116,7 @@
     "\n",
     "## AUGMENTATIONS \n",
     "## USUALLY MODIFIED: main augmentation ['aprs', 'normal', 'com-cor', 'amp-adj', 'dsamp', 'faa'] DEFAULT: []\n",
-    "## it has tuples to take in the probability of the augmentation\n",
+    "## it has tuples to take in the probability of the augmentation e.g. [(*AUG, *PROB)]\n",
     "options['main_aug'] = [('normal', .5)]# [('aprs', .5), ('amp-adj', .2), ('com-cor', .5)]                        \n",
     "options['aprp'] = False ## APR-Pair is activated in the training, turn on/off here\n",
     "## when the normal augmentations is activated in main_aug, it will use aug_set for the kind of augmentations to use\n",
@@ -162,17 +168,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Currently using GPU: 0\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "## Set the seed and use GPU when available unless explicitly set to CPU in the options above\n",
     "torch.manual_seed(options['seed'])\n",
@@ -198,39 +196,23 @@
     "### Set-up the dataset to use\n",
     "- Train Set: Training Dataset\n",
     "- Test Set: Test Dataset \n",
-    "- Out Set: A separate Test Dataset"
+    "- Out Set: A separate Test Dataset\n",
+    "\n",
+    "The network is trained on the training set and tested on the test set and out set.<br>\n",
+    "Both the test set and out set are not seen or touched by the network.<br>\n",
+    "\n",
+    "The out set is normally used as another dataset from another distribution (e.g., low quality images of the same class as the test set).<br>\n",
+    "It tests if the network can also perform well on these datasets. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "NormalAugmentations ('normal', 0.5)\n",
-      "Creating model: resnet18\n",
-      "resnet18\n",
-      "==> Epoch 1/200\n",
-      "Batch 28/115\t Loss 1.904637 (4.331332)\n"
-     ]
-    },
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[4], line 87\u001b[0m\n\u001b[0;32m     84\u001b[0m \u001b[39mfor\u001b[39;00m epoch \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(options[\u001b[39m'\u001b[39m\u001b[39mmax_epoch\u001b[39m\u001b[39m'\u001b[39m]):\n\u001b[0;32m     85\u001b[0m     \u001b[39mprint\u001b[39m(\u001b[39m\"\u001b[39m\u001b[39m==> Epoch \u001b[39m\u001b[39m{}\u001b[39;00m\u001b[39m/\u001b[39m\u001b[39m{}\u001b[39;00m\u001b[39m\"\u001b[39m\u001b[39m.\u001b[39mformat(epoch\u001b[39m+\u001b[39m\u001b[39m1\u001b[39m, options[\u001b[39m'\u001b[39m\u001b[39mmax_epoch\u001b[39m\u001b[39m'\u001b[39m]))\n\u001b[1;32m---> 87\u001b[0m     train(net, criterion, optimizer, trainloader, epoch\u001b[39m=\u001b[39;49mepoch, \u001b[39m*\u001b[39;49m\u001b[39m*\u001b[39;49moptions)\n\u001b[0;32m     89\u001b[0m     \u001b[39mif\u001b[39;00m options[\u001b[39m'\u001b[39m\u001b[39meval_freq\u001b[39m\u001b[39m'\u001b[39m] \u001b[39m>\u001b[39m \u001b[39m0\u001b[39m \u001b[39mand\u001b[39;00m (epoch\u001b[39m+\u001b[39m\u001b[39m1\u001b[39m) \u001b[39m%\u001b[39m options[\u001b[39m'\u001b[39m\u001b[39meval_freq\u001b[39m\u001b[39m'\u001b[39m] \u001b[39m==\u001b[39m \u001b[39m0\u001b[39m \u001b[39mor\u001b[39;00m (epoch\u001b[39m+\u001b[39m\u001b[39m1\u001b[39m) \u001b[39m==\u001b[39m options[\u001b[39m'\u001b[39m\u001b[39mmax_epoch\u001b[39m\u001b[39m'\u001b[39m]:\n\u001b[0;32m     90\u001b[0m         \u001b[39mprint\u001b[39m(\u001b[39m\"\u001b[39m\u001b[39m==> Test\u001b[39m\u001b[39m\"\u001b[39m)\n",
-      "File \u001b[1;32me:\\PostDoc\\Coding\\Z-Turnover\\NormalAugmentations_Plus\\core\\train.py:102\u001b[0m, in \u001b[0;36mtrain\u001b[1;34m(net, criterion, optimizer, trainloader, epoch, **options)\u001b[0m\n\u001b[0;32m     99\u001b[0m     loss\u001b[39m.\u001b[39mbackward()\n\u001b[0;32m    100\u001b[0m     optimizer\u001b[39m.\u001b[39mstep()\n\u001b[1;32m--> 102\u001b[0m losses\u001b[39m.\u001b[39mupdate(loss\u001b[39m.\u001b[39mitem(), targets\u001b[39m.\u001b[39;49msize(\u001b[39m0\u001b[39m))\n\u001b[0;32m    104\u001b[0m \u001b[39mif\u001b[39;00m (batch_idx\u001b[39m+\u001b[39m\u001b[39m1\u001b[39m) \u001b[39m%\u001b[39m options[\u001b[39m'\u001b[39m\u001b[39mprint_freq\u001b[39m\u001b[39m'\u001b[39m] \u001b[39m==\u001b[39m \u001b[39m0\u001b[39m:\n\u001b[0;32m    105\u001b[0m     \u001b[39mprint\u001b[39m(\u001b[39m\"\u001b[39m\u001b[39mBatch \u001b[39m\u001b[39m{}\u001b[39;00m\u001b[39m/\u001b[39m\u001b[39m{}\u001b[39;00m\u001b[39m\\t\u001b[39;00m\u001b[39m Loss \u001b[39m\u001b[39m{:.6f}\u001b[39;00m\u001b[39m (\u001b[39m\u001b[39m{:.6f}\u001b[39;00m\u001b[39m)\u001b[39m\u001b[39m\"\u001b[39m \\\n\u001b[0;32m    106\u001b[0m           \u001b[39m.\u001b[39mformat(batch_idx\u001b[39m+\u001b[39m\u001b[39m1\u001b[39m, \u001b[39mlen\u001b[39m(trainloader), losses\u001b[39m.\u001b[39mval, losses\u001b[39m.\u001b[39mavg))\n",
-      "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
+    "## Load the dataset using the dataset address\n",
+    "\n",
     "if options['dataset'] == 'cifar10':\n",
     "    Data = CIFAR10D(dataroot=options['data'], batch_size=options['batch_size'], _transforms=options['main_aug'], _eval=options['eval'])\n",
     "    OODData = CIFAR100D(dataroot=options['data'], batch_size=options['batch_size'], _transforms=options['main_aug'])\n",
@@ -309,8 +291,10 @@
     "for epoch in range(options['max_epoch']):\n",
     "    print(\"==> Epoch {}/{}\".format(epoch+1, options['max_epoch']))\n",
     "\n",
+    "    ## Train the network\n",
     "    train(net, criterion, optimizer, trainloader, epoch=epoch, **options)\n",
     "\n",
+    "    ## Print the results and save the best parameters for dataset and outset\n",
     "    if options['eval_freq'] > 0 and (epoch+1) % options['eval_freq'] == 0 or (epoch+1) == options['max_epoch']:\n",
     "        print(\"==> Test\")\n",
     "        results = test_two_datasets(net, criterion, testloader, outloader, epoch=epoch, **options)\n",
