Cleaned the codes and added helpful comments

--- a/main.ipynb
+++ b/main.ipynb
@@ -117,7 +117,7 @@
     "## AUGMENTATIONS \n",
     "## USUALLY MODIFIED: main augmentation ['aprs', 'normal', 'com-cor', 'amp-adj', 'dsamp', 'faa'] DEFAULT: []\n",
     "## it has tuples to take in the probability of the augmentation e.g. [(*AUG, *PROB)]\n",
-    "options['main_aug'] = [('normal', .5)]# [('aprs', .5), ('amp-adj', .2), ('com-cor', .5)]                        \n",
+    "options['main_aug'] = [('faa', .5)]# [('aprs', .5), ('amp-adj', .2), ('com-cor', .5)]                        \n",
     "options['aprp'] = False ## APR-Pair is activated in the training, turn on/off here\n",
     "## when the normal augmentations is activated in main_aug, it will use aug_set for the kind of augmentations to use\n",
     "options['aug_set'] = 'geo-photo' ## ['geo', 'photo', 'geo-photo', 'geo-k', 'photo-k', 'geo-photo-k'] '-k' means kornia version or the default PIL ver\n",
