Inserted the options['faa_policy_addr'] and revised dependencies

--- a/main.ipynb
+++ b/main.ipynb
@@ -121,6 +121,7 @@
     "options['aprp'] = False ## APR-Pair is activated in the training, turn on/off here\n",
     "## when the normal augmentations is activated in main_aug, it will use aug_set for the kind of augmentations to use\n",
     "options['aug_set'] = 'geo-photo' ## ['geo', 'photo', 'geo-photo', 'geo-k', 'photo-k', 'geo-photo-k'] '-k' means kornia version or the default PIL ver\n",
+    "options['faa_policy_addr'] = 'datasets/faster_autoaugment/policy_weights/19_dsaa.pt' ## used when the faa policy is activated\n",
     "\n",
     "\n",
     "# optimization\n",
@@ -225,7 +226,7 @@
     "    elif options['dataset_mosq'] == 'HQ100LQ20':\n",
     "        data_dir = options['dataset_addr_HQ100LQ20']\n",
     "        \n",
-    "    Data = CustomDataset(dataroot=data_dir, batch_size=options['batch_size'], _transforms=options['main_aug'], _eval=True, input_size=options['input_size'])\n",
+    "    Data = CustomDataset(dataroot=data_dir, batch_size=options['batch_size'], _transforms=options['main_aug'], _eval=True, input_size=options['input_size'], faa_policy=options['faa_policy_addr'])\n",
     "\n",
     "    ## Initialize the dataloader\n",
     "    trainloader, testloader, outloader = Data.train_loader, Data.test_loader, Data.out_loaders\n",
